<resources>
    <string name="app_name" translatable="false">ProyectoM13</string>
    <string name="strPassword">Password</string>
    <string name="strUser">Usuario</string>
    <string name="registrarse">Registrase</string>
    <string name="faltanDatosLogin">Introduce el usuario y la contraseña</string>
    <string name="str_en">English</string>
    <string name="str_es">Español</string>
    <string name="particular">Particular</string>
    <string name="empresa">Empresa</string>
    <string name="nombre">Nombre</string>
    <string name="contrase_a">Contraseña</string>
    <string name="apellidos">Apellidos</string>
    <string name="confirmar_contrase_a">Confirmar contraseña</string>
    <string name="correo_electr_nico">Correo electrónico</string>
    <string name="confirmar">Enviar</string>
    <string name="nombre_de_usuario">Nombre de usuario</string>
    <string name="nombre_y_apellidos">Nombre y apellidos</string>
    <string name="nombre_empresa">Nombre empresa</string>
    <string name="salir">Salir-></string>
    <string name="compartir">Compartir</string>
    <string name="guardar_art_culo">Guardar artículo</string>
    <string name="buscar_art_culo">Buscar artículo</string>
    <string name="slogan">Sabrás siempre lo que tienes y dónde lo tienes</string>
    <string name="idioma">Idioma</string>
    <string name="koLogin">Usuario o password incorrectos</string>
    <string name="buscar">Buscar</string>
    <string name="atras">Atras</string>
    <string name="buscar_objeto_por_nombre">BUSCAR OBJETO POR NOMBRE</string>
    <string name="noEncontrar">No se encontraron resultados</string>
    <string name="encontrado"> se encontraron resultados</string>
    <string name="completeCampos">Por favor, complete todos los campos</string>
    <string name="formatoContraseña">Debe tener al menos una mayúscula, una minúscula, un número y mínimo de 8 caracteres.</string>
    <string name="comprobarContra">Las contraseñas no coinciden</string>
    <string name="formatoEmail">El formato del email es incorrecto.</string>
    <string name="exiteUsuario">Ya existe un usuario con ese nombre</string>

    <!-- alta objeto -->
    <string name="koObjeto">Error al guardar el objeto</string>
    <string name="okObjeto">El objeto se ha guardado correctamente</string>
    <string name="nombreVacio">El nombre del objeto no puede estar vacio</string>
    <string name="descripcion">Descripcion</string>
    <string name="seleccionar">Seleccionar</string>
    <string name="nombre_del_objeto">Nombre del Objeto</string>
    <string name="con_qui_n_quieres_compartir">¿Con quién quieres compartir?</string>
    <string name="lugar_guardado">Lugar</string>
    <string name="altaUsuarioOK">Usuario añadido con éxito, ingrese sus credenciales para acceder</string>
    <string name="quiero_compartir">Quiero compartir contigo desde Find-It</string>
    <string name="hola">\"¡¡Hola!! \"</string>
    <string name="compartir_imagen_texto">Compartir imagen y texto</string>

    <!-- ver foto -->
    <string name="actualizarOK">Objeto guardado</string>
    <string name="borrarOK">Objecto borrado</string>
    <string name="actualizarKO">Error guardando el objeto</string>
    <string name="borrarKO">Error borrando el objeto</string>

    <string-array name="languages">
        <item>@string/str_en</item>
        <item>@string/str_es</item>

    </string-array>
    <string name="he_guardao">"He guardado estos objetos y me gustaría que supieras dónde están: "</string>
    <string name="entrar">Entrar</string>
    <string name="guardar">Guardar</string>
    <string name="selecciona_los_usuarios">Selecciona los usuarios:</string>
    <string name="selecciona_los_objetos">Selecciona los objetos:</string>
    <string name="no_edit">No editar objeto</string>
    <string name="edit">Editar objeto</string>
    <string name="desea_editar">¿Deseas editar este objeto?</string>
    <string name="si">Sí</string>
    <string name="no">No</string>
    <string name="fecha">Fecha</string>
    <string name="existe_email">Ya existe un usuario dado de alta con ese email</string>
    <string name="modificado">Modificado</string>


</resources>