<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".SeleccionarUsuario">

    <Button
        android:id="@+id/btCompartirUsuariosAtras"
        android:layout_width="129dp"
        android:layout_height="57dp"
        android:layout_marginStart="45dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/bt_selector"
        android:backgroundTint="@color/gris_boton"
        android:text="@string/atras"
        android:textColor="@color/verde"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btCompartirDeListaUsuarios"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/selecciona_los_usuarios"
        android:textColor="@color/verde"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/lvListaUsuarios"
        android:layout_width="344dp"
        android:layout_height="496dp"
        android:background="@color/black"
        android:choiceMode="multipleChoice"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btCompartirDeListaUsuarios"
        android:layout_width="129dp"
        android:layout_height="57dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/bt_selector"
        android:backgroundTint="@color/gris_boton"
        android:text="@string/seleccionar"
        android:textColor="@color/verde"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>