<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:backgroundTintMode="screen"
    android:outlineProvider="background"
    android:textAlignment="center"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="304dp"
        android:layout_height="78dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivDetective"
        app:layout_constraintVertical_bias="0.5"
        app:srcCompat="@drawable/logofind" />

    <ImageView
        android:id="@+id/ivDetective"
        android:layout_width="290dp"
        android:layout_height="245dp"
        app:layout_constraintBottom_toTopOf="@+id/ivLogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        app:srcCompat="@drawable/detective" />

    <Button
        android:id="@+id/ibEntrar"
        android:layout_width="129dp"
        android:layout_height="57dp"
        android:background="@drawable/bt_selector"
        android:text="@string/entrar"
        android:textColor="@color/verde"
        app:layout_constraintBottom_toTopOf="@+id/btRegistro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/btRegistro"
        android:layout_width="129dp"
        android:layout_height="57dp"
        android:background="@drawable/bt_selector"
        android:text="@string/registrarse"
        android:textColor="@color/verde"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ibEntrar"
        app:layout_constraintVertical_bias="0.5" />

    <ImageButton
        android:id="@+id/ibIdioma"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_mapmode" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="278dp"
        android:layout_height="48dp"
        android:background="@drawable/et_redondo"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/ibEntrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
        app:layout_constraintVertical_bias="0.5">

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="230dp"
            android:layout_height="48dp"

            android:ems="10"
            android:hint="@string/contrase_a"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <ImageButton
            android:id="@+id/ibOjo"
            style="@style/MyButtonStyle"
            android:layout_width="42dp"
            android:layout_height="49dp"
            android:alpha="0.5"
            app:srcCompat="@drawable/ojo_tachado" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="278dp"
        android:layout_height="48dp"
        android:background="@drawable/et_redondo"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivLogo"
        app:layout_constraintVertical_bias="0.5">

        <EditText
            android:id="@+id/etUsuario"
            android:layout_width="225dp"
            android:layout_height="48dp"
            android:background="@drawable/et_redondo"
            android:backgroundTintMode="screen"
            android:ems="10"
            android:foregroundTint="#EFE9E9"
            android:hint="@string/strUser"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/ivUsuario"
            android:layout_width="30dp"
            android:layout_height="42dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:alpha="0.3"
            app:srcCompat="@drawable/ojo_tachado" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
